add concentrations calcs

--- a/lasertram_tests.ipynb
+++ b/lasertram_tests.ipynb
@@ -10,7 +10,91 @@
     "import lasertram as lt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from tqdm.notebook import tqdm\n"
+    "from tqdm.notebook import tqdm\n",
+    "import mendeleev\n",
+    "def oxide_to_ppm(wt_percent, int_std):\n",
+    "    \"\"\"\n",
+    "    convert concentration internal standard analyte oxide in weight percent to\n",
+    "    concentration ppm for a 1D series of data\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    wt_percent : array-like\n",
+    "        the oxide values to be converted to ppm\n",
+    "    int_std : string\n",
+    "        the internal standard used in the experiment (e.g., '29Si', '43Ca',\n",
+    "                                                      '47Ti')\n",
+    "        currently supported elements:\n",
+    "\n",
+    "            - 'SiO2'\n",
+    "            - 'TiO2'\n",
+    "            - 'Al2O3'\n",
+    "            - 'Cr2O3'\n",
+    "            - 'MnO'\n",
+    "            - 'FeO'\n",
+    "            - 'K2O'\n",
+    "            - 'CaO'\n",
+    "            - 'Na2O'\n",
+    "            - 'NiO'\n",
+    "            - 'MgO'\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    ppm : array-like\n",
+    "        concentrations in ppm the same shape as the wt_percent input\n",
+    "\n",
+    "    \"\"\"\n",
+    "\n",
+    "    el = [i for i in int_std if not i.isdigit()]\n",
+    "\n",
+    "    if len(el) == 2:\n",
+    "        element = el[0] + el[1]\n",
+    "\n",
+    "    else:\n",
+    "        element = el[0]\n",
+    "\n",
+    "    oxides = [\n",
+    "        \"SiO2\",\n",
+    "        \"TiO2\",\n",
+    "        \"Al2O3\",\n",
+    "        \"Cr2O3\",\n",
+    "        \"MnO\",\n",
+    "        \"FeO\",\n",
+    "        \"K2O\",\n",
+    "        \"CaO\",\n",
+    "        \"Na2O\",\n",
+    "        \"NiO\",\n",
+    "        \"MgO\",\n",
+    "    ]\n",
+    "\n",
+    "    for o in oxides:\n",
+    "        if element in o:\n",
+    "            oxide = o\n",
+    "\n",
+    "    s = oxide.split(\"O\")\n",
+    "    cat_subscript = s[0]\n",
+    "    an_subscript = s[1]\n",
+    "\n",
+    "    cat_subscript = [i for i in cat_subscript if i.isdigit()]\n",
+    "    if cat_subscript:\n",
+    "        cat_subscript = int(cat_subscript[0])\n",
+    "    else:\n",
+    "        cat_subscript = 1\n",
+    "\n",
+    "    an_subscript = [i for i in an_subscript if i.isdigit()]\n",
+    "    if an_subscript:\n",
+    "        an_subscript = int(an_subscript[0])\n",
+    "    else:\n",
+    "        an_subscript = 1\n",
+    "\n",
+    "    ppm = 1e4 * (\n",
+    "        (wt_percent * mendeleev.element(element).atomic_weight * cat_subscript)\n",
+    "        / (\n",
+    "            mendeleev.element(element).atomic_weight\n",
+    "            + mendeleev.element(\"O\").atomic_weight * an_subscript\n",
+    "        )\n",
+    "    )\n",
+    "    return ppm\n"
    ]
   },
   {
@@ -278,7 +362,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "734669200b0949a0be4b476721c9b680",
+       "model_id": "cc192e7b12ce4ebda9f395f407384243",
        "version_major": 2,
        "version_minor": 0
       },
@@ -300,7 +384,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ef16ce10a0e45c3995ab3774609076a",
+       "model_id": "37a3979db6154d10b9f8ecec56901506",
        "version_major": 2,
        "version_minor": 0
       },
@@ -350,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,9 +449,168 @@
     "    np.full(concentrations.data[\"Spot\"].shape[0], 71.9),\n",
     "    np.full(concentrations.data[\"Spot\"].shape[0], 1),\n",
     ")\n",
-    "concentrations.calculate_concentrations(SRM = True)\n",
+    "concentrations.calculate_concentrations()\n",
+    "# concentrations.calculate_concentrations(SRM = True)\n",
     "# concentrations.calculate_concentrations(SRM = False)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>7Li</th>\n",
+       "      <th>24Mg</th>\n",
+       "      <th>27Al</th>\n",
+       "      <th>29Si</th>\n",
+       "      <th>43Ca</th>\n",
+       "      <th>48Ti</th>\n",
+       "      <th>57Fe</th>\n",
+       "      <th>88Sr</th>\n",
+       "      <th>138Ba</th>\n",
+       "      <th>139La</th>\n",
+       "      <th>140Ce</th>\n",
+       "      <th>153Eu</th>\n",
+       "      <th>208Pb</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.891205</td>\n",
+       "      <td>0.866808</td>\n",
+       "      <td>1.007761</td>\n",
+       "      <td>0.999941</td>\n",
+       "      <td>1.091779</td>\n",
+       "      <td>10.522441</td>\n",
+       "      <td>1.034384</td>\n",
+       "      <td>1.124602</td>\n",
+       "      <td>1.055383</td>\n",
+       "      <td>1.157044</td>\n",
+       "      <td>1.078661</td>\n",
+       "      <td>1.161651</td>\n",
+       "      <td>1.013653</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.906571</td>\n",
+       "      <td>0.842899</td>\n",
+       "      <td>1.002999</td>\n",
+       "      <td>0.999941</td>\n",
+       "      <td>1.087957</td>\n",
+       "      <td>10.493219</td>\n",
+       "      <td>1.092748</td>\n",
+       "      <td>1.120797</td>\n",
+       "      <td>1.053964</td>\n",
+       "      <td>1.146525</td>\n",
+       "      <td>1.077783</td>\n",
+       "      <td>1.160084</td>\n",
+       "      <td>1.001188</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.913992</td>\n",
+       "      <td>0.882185</td>\n",
+       "      <td>1.012040</td>\n",
+       "      <td>0.999941</td>\n",
+       "      <td>1.121267</td>\n",
+       "      <td>10.925244</td>\n",
+       "      <td>1.056840</td>\n",
+       "      <td>1.149383</td>\n",
+       "      <td>1.082358</td>\n",
+       "      <td>1.194247</td>\n",
+       "      <td>1.100061</td>\n",
+       "      <td>1.181089</td>\n",
+       "      <td>1.030895</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.861375</td>\n",
+       "      <td>0.872835</td>\n",
+       "      <td>1.023704</td>\n",
+       "      <td>0.999941</td>\n",
+       "      <td>1.102944</td>\n",
+       "      <td>10.803386</td>\n",
+       "      <td>1.000954</td>\n",
+       "      <td>1.140821</td>\n",
+       "      <td>1.082756</td>\n",
+       "      <td>1.167138</td>\n",
+       "      <td>1.079316</td>\n",
+       "      <td>1.177700</td>\n",
+       "      <td>1.028509</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.863712</td>\n",
+       "      <td>0.883180</td>\n",
+       "      <td>1.012253</td>\n",
+       "      <td>0.999941</td>\n",
+       "      <td>1.101301</td>\n",
+       "      <td>10.738839</td>\n",
+       "      <td>0.966697</td>\n",
+       "      <td>1.132206</td>\n",
+       "      <td>1.064677</td>\n",
+       "      <td>1.139901</td>\n",
+       "      <td>1.061408</td>\n",
+       "      <td>1.167204</td>\n",
+       "      <td>1.020851</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        7Li      24Mg      27Al      29Si      43Ca       48Ti      57Fe  \\\n",
+       "0  0.891205  0.866808  1.007761  0.999941  1.091779  10.522441  1.034384   \n",
+       "1  0.906571  0.842899  1.002999  0.999941  1.087957  10.493219  1.092748   \n",
+       "2  0.913992  0.882185  1.012040  0.999941  1.121267  10.925244  1.056840   \n",
+       "3  0.861375  0.872835  1.023704  0.999941  1.102944  10.803386  1.000954   \n",
+       "4  0.863712  0.883180  1.012253  0.999941  1.101301  10.738839  0.966697   \n",
+       "\n",
+       "       88Sr     138Ba     139La     140Ce     153Eu     208Pb  \n",
+       "0  1.124602  1.055383  1.157044  1.078661  1.161651  1.013653  \n",
+       "1  1.120797  1.053964  1.146525  1.077783  1.160084  1.001188  \n",
+       "2  1.149383  1.082358  1.194247  1.100061  1.181089  1.030895  \n",
+       "3  1.140821  1.082756  1.167138  1.079316  1.177700  1.028509  \n",
+       "4  1.132206  1.064677  1.139901  1.061408  1.167204  1.020851  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "concentrations.unknown_concentrations / srm_data.set_index('Standard').loc['NIST-612',concentrations.elements].to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
