--- a/lasertram_tests.ipynb
+++ b/lasertram_tests.ipynb
@@ -10,91 +10,7 @@
     "import lasertram as lt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from tqdm.notebook import tqdm\n",
-    "import mendeleev\n",
-    "def oxide_to_ppm(wt_percent, int_std):\n",
-    "    \"\"\"\n",
-    "    convert concentration internal standard analyte oxide in weight percent to\n",
-    "    concentration ppm for a 1D series of data\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    wt_percent : array-like\n",
-    "        the oxide values to be converted to ppm\n",
-    "    int_std : string\n",
-    "        the internal standard used in the experiment (e.g., '29Si', '43Ca',\n",
-    "                                                      '47Ti')\n",
-    "        currently supported elements:\n",
-    "\n",
-    "            - 'SiO2'\n",
-    "            - 'TiO2'\n",
-    "            - 'Al2O3'\n",
-    "            - 'Cr2O3'\n",
-    "            - 'MnO'\n",
-    "            - 'FeO'\n",
-    "            - 'K2O'\n",
-    "            - 'CaO'\n",
-    "            - 'Na2O'\n",
-    "            - 'NiO'\n",
-    "            - 'MgO'\n",
-    "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    ppm : array-like\n",
-    "        concentrations in ppm the same shape as the wt_percent input\n",
-    "\n",
-    "    \"\"\"\n",
-    "\n",
-    "    el = [i for i in int_std if not i.isdigit()]\n",
-    "\n",
-    "    if len(el) == 2:\n",
-    "        element = el[0] + el[1]\n",
-    "\n",
-    "    else:\n",
-    "        element = el[0]\n",
-    "\n",
-    "    oxides = [\n",
-    "        \"SiO2\",\n",
-    "        \"TiO2\",\n",
-    "        \"Al2O3\",\n",
-    "        \"Cr2O3\",\n",
-    "        \"MnO\",\n",
-    "        \"FeO\",\n",
-    "        \"K2O\",\n",
-    "        \"CaO\",\n",
-    "        \"Na2O\",\n",
-    "        \"NiO\",\n",
-    "        \"MgO\",\n",
-    "    ]\n",
-    "\n",
-    "    for o in oxides:\n",
-    "        if element in o:\n",
-    "            oxide = o\n",
-    "\n",
-    "    s = oxide.split(\"O\")\n",
-    "    cat_subscript = s[0]\n",
-    "    an_subscript = s[1]\n",
-    "\n",
-    "    cat_subscript = [i for i in cat_subscript if i.isdigit()]\n",
-    "    if cat_subscript:\n",
-    "        cat_subscript = int(cat_subscript[0])\n",
-    "    else:\n",
-    "        cat_subscript = 1\n",
-    "\n",
-    "    an_subscript = [i for i in an_subscript if i.isdigit()]\n",
-    "    if an_subscript:\n",
-    "        an_subscript = int(an_subscript[0])\n",
-    "    else:\n",
-    "        an_subscript = 1\n",
-    "\n",
-    "    ppm = 1e4 * (\n",
-    "        (wt_percent * mendeleev.element(element).atomic_weight * cat_subscript)\n",
-    "        / (\n",
-    "            mendeleev.element(element).atomic_weight\n",
-    "            + mendeleev.element(\"O\").atomic_weight * an_subscript\n",
-    "        )\n",
-    "    )\n",
-    "    return ppm\n"
+    "from tqdm.notebook import tqdm\n"
    ]
   },
   {
@@ -316,13 +232,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -341,13 +250,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -362,7 +264,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b5a308d93bf24d80a62f2919e1bd16ed",
+       "model_id": "c1ab5aa1d0e14a91b02f89005807d4f9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -384,7 +286,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a6ab9f64f2354f09a0e1c161d8e9df6f",
+       "model_id": "fb1e114d300d427ca468e7feb717c7fc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -434,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +530,7 @@
        "unknown  42.267666  40.808451  41.076491  40.852124  39.374232  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1014,7 @@
        "BHVO-2G  14.439101   35.320717  2.049888  1.870431  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1120,6 +1022,13 @@
    "source": [
     "concentrations.SRM_concentrations"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1145,7 +1054,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
