--- a/lasertram_tests.ipynb
+++ b/lasertram_tests.ipynb
@@ -400,30 +400,30 @@
     }
    ],
    "source": [
-    "bkgd_interval = (5,8)\n",
-    "keep_interval = (25,45)\n",
+    "bkgd_interval = (5, 8)\n",
+    "keep_interval = (25, 45)\n",
     "\n",
     "int_std = \"29Si\"\n",
     "\n",
     "my_spots = []\n",
     "print(\"PROCESSING SPOTS\\n\")\n",
     "for sample in tqdm(samples):\n",
-    "    spot = LaserTRAM(name = sample)\n",
+    "    spot = LaserTRAM(name=sample)\n",
     "    lt.process_spot(\n",
     "        spot,\n",
-    "        raw_data = data.loc[sample,:],\n",
-    "        bkgd = bkgd_interval,\n",
-    "        keep = keep_interval,\n",
-    "        internal_std = int_std,\n",
-    "        despike = False,\n",
-    "        output_report = True\n",
-    "        )\n",
+    "        raw_data=data.loc[sample, :],\n",
+    "        bkgd=bkgd_interval,\n",
+    "        keep=keep_interval,\n",
+    "        internal_std=int_std,\n",
+    "        despike=False,\n",
+    "        output_report=True,\n",
+    "    )\n",
     "    my_spots.append(spot)\n",
     "\n",
     "print(\"COMBINING OUTPUT REPORTS\\n\")\n",
     "processed_df = pd.DataFrame()\n",
     "for spot in tqdm(my_spots):\n",
-    "    processed_df = pd.concat([processed_df,spot.output_report])\n"
+    "    processed_df = pd.concat([processed_df, spot.output_report])"
    ]
   },
   {
@@ -643,6 +643,65 @@
    "source": [
     "srm_data = pd.read_excel(r\"C:\\Users\\jlubbers\\OneDrive - DOI\\Research\\Coding\\laserTRAM-DB\\tests\\laicpms_stds_tidy.xlsx\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sample\n",
+       "BCR-2G               BCR-2G_1\n",
+       "BCR-2G               BCR-2G_2\n",
+       "ATHO-G               ATHO-G_1\n",
+       "ATHO-G               ATHO-G_2\n",
+       "BHVO-2G             BHVO-2G_1\n",
+       "BHVO-2G             BHVO-2G_2\n",
+       "unknown    unknown_nist-612_1\n",
+       "unknown    unknown_nist-612_2\n",
+       "BCR-2G               BCR-2G_3\n",
+       "ATHO-G               ATHO-G_3\n",
+       "BCR-2G               BCR-2G_4\n",
+       "ATHO-G               ATHO-G_4\n",
+       "BCR-2G               BCR-2G_5\n",
+       "ATHO-G               ATHO-G_5\n",
+       "BCR-2G               BCR-2G_6\n",
+       "ATHO-G               ATHO-G_6\n",
+       "BCR-2G               BCR-2G_7\n",
+       "ATHO-G               ATHO-G_7\n",
+       "BCR-2G               BCR-2G_8\n",
+       "ATHO-G               ATHO-G_8\n",
+       "BHVO-2G             BHVO-2G_3\n",
+       "unknown    unknown_nist-612_3\n",
+       "BCR-2G               BCR-2G_9\n",
+       "ATHO-G               ATHO-G_9\n",
+       "BCR-2G              BCR-2G_10\n",
+       "ATHO-G              ATHO-G_10\n",
+       "BCR-2G              BCR-2G_11\n",
+       "ATHO-G              ATHO-G_11\n",
+       "BCR-2G              BCR-2G_12\n",
+       "ATHO-G              ATHO-G_12\n",
+       "BCR-2G              BCR-2G_13\n",
+       "ATHO-G              ATHO-G_13\n",
+       "BCR-2G              BCR-2G_14\n",
+       "BCR-2G              BCR-2G_15\n",
+       "ATHO-G              ATHO-G_14\n",
+       "ATHO-G              ATHO-G_15\n",
+       "BHVO-2G             BHVO-2G_4\n",
+       "BHVO-2G             BHVO-2G_5\n",
+       "unknown    unknown_nist-612_4\n",
+       "unknown    unknown_nist-612_5\n",
+       "Name: Spot, dtype: object"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
