code review comment changes

--- a/docs/lasertram_tutorial.ipynb
+++ b/docs/lasertram_tutorial.ipynb
@@ -316,7 +316,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have confirmed that the data are in the right format and look correct we can begin processing with `LaserTRAM`! The first thing to do is to instantiate a `LaserTRAM` object and give it a name that reflects the material being ablated. For relatibility we will call the object `spot` and assign the name attribute that of the `SampleLabel` column.\n"
+    "Now that we have confirmed that the data are in the right format and look correct we can begin processing with `LaserTRAM`! The first thing to do is to instantiate a `LaserTRAM` object and give it a name that reflects the material being ablated. For relatability we will call the object `spot` and assign the name attribute that of the `SampleLabel` column.\n"
    ]
   },
   {
@@ -1114,7 +1114,7 @@
    "source": [
     "## LaserCalc\n",
     "\n",
-    "With an entire experiment run through `LaserTRAM` much of the \"hard\" work and decision making has been done (i.e., you have some pesky analyses with heterogeneities you'd like to not include in your calculations) and we're ready for `LaserCalc`! Now seems like a good time to point back to the [Background](explanation.md) page for all the underlying maths that help govern these calculations. Similar to `LaserTRAM`, we begin the `LaserCalc` process by instantiating an object. Here we call it `concentrations` for relatibility.\n"
+    "With an entire experiment run through `LaserTRAM` much of the \"hard\" work and decision making has been done (i.e., you have some pesky analyses with heterogeneities you'd like to not include in your calculations) and we're ready for `LaserCalc`! Now seems like a good time to point back to the [Background](explanation.md) page for all the underlying maths that help govern these calculations. Similar to `LaserTRAM`, we begin the `LaserCalc` process by instantiating an object. Here we call it `concentrations` for relatability.\n"
    ]
   },
   {
